--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ring tunes -Download Your Ringtones in seconds</title>
+    <!-- Tailwindcss -->
+     <link rel="stylesheet" href="./assets/css/main.css">
   </head>
   <body>
+    <h1 class="text-red-500 text-4xl">Ringing.!</h1>
   </body>
 </html>
