--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         <section class="mx-5 my-5">
           <h4 class="font-semibold">Browse by artists</h4>
           <div class="flex space-x-4 sm:space-x-10  mt-3">
-            <div class="w-16 h-16 sm:w-28 sm:h-28 bg-gray-300 rounded"><img src="./assets/images/ani.jpg" alt="" class="w-16 h-16 sm:w-28 sm:h-28 object-cover"></div>
-            <div class="w-16 h-16 sm:w-28 sm:h-28 bg-gray-300 rounded"><img src="./assets/images/ar.jpg" alt="" class="w-16 h-16 sm:w-28 sm:h-28 object-cover"></div>
-            <div class="w-16 h-16 sm:w-28 sm:h-28 bg-gray-300 rounded"><img src="./assets/images/Ed-Sheeran-performs-Rockefeller-Plaza-Today-Show-New-York-2023.webp" alt="" class="w-16 h-16 sm:w-28 sm:h-28 object-cover"></div>
-            <div class="w-16 h-16 sm:w-28 sm:h-28 bg-gray-300 rounded"><img src="./assets/images/gv.jpg" alt="" class="w-16 h-16 sm:w-28 sm:h-28 object-cover"></div>
-            <div class="w-16 h-16 sm:w-28 sm:h-28 bg-gray-300 rounded hidden sm:block"><img src="./assets/images/hari.jpg" alt="" class="w-16 h-16 sm:w-28 sm:h-28 object-cover"></div>
+            <div class="w-16 h-16 sm:w-28 sm:h-28 bg-gray-300 rounded"><img src="./assets/images/ani.jpg" alt="" class="w-16 h-16 sm:w-28 sm:h-28 object-cover rounded"></div>
+            <div class="w-16 h-16 sm:w-28 sm:h-28 bg-gray-300 rounded"><img src="./assets/images/ar.jpg" alt="" class="w-16 h-16 sm:w-28 sm:h-28 object-cover rounded"></div>
+            <div class="w-16 h-16 sm:w-28 sm:h-28 bg-gray-300 rounded"><img src="./assets/images/Ed-Sheeran-performs-Rockefeller-Plaza-Today-Show-New-York-2023.webp" alt="" class="w-16 h-16 sm:w-28 sm:h-28 object-cover rounded"></div>
+            <div class="w-16 h-16 sm:w-28 sm:h-28 bg-gray-300 rounded"><img src="./assets/images/gv.jpg" alt="" class="w-16 h-16 sm:w-28 sm:h-28 object-cover rounded"></div>
+            <div class="w-16 h-16 sm:w-28 sm:h-28 bg-gray-300 rounded hidden sm:block"><img src="./assets/images/hari.jpg" alt="" class="w-16 h-16 sm:w-28 sm:h-28 object-cover rounded"></div>
 
 
           </div>
